--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@
             init: function () {
                 S.Drawing.init('.canvas');
                 document.body.classList.add('body--ready');
-                S.UI.simulate("Chúc Em Bé|Sinh Nhật|Vui Vẻ|Hạnh Phúc|#countdown 3|Happy Birthday|Anh|Yêu|Bé|Nhất|Trên Đời|25:08|❤️");
+                S.UI.simulate("Chúc Em Bé|Sinh Nhật|Vui Vẻ|Hạnh Phúc|Happy Birthday|Anh|Yêu|Bé|Nhất|Trên Đời|25:08|❤️|#countdown 3");
                 S.Drawing.loop(function () {
                     S.Shape.render();
                 });
