--- a/image-fly.html
+++ b/image-fly.html
@@ -64,16 +64,36 @@
         window.addEventListener('resize', adjustCanvas);
 
         const images = [
-            'embe1.jpg',
-            'embe2.jpg',
-            'https://img.freepik.com/free-vector/celebration-background-with-balloons-confetti_1308-75011.jpg',
-            'https://img.freepik.com/free-vector/happy-birthday-background-with-cake-gift_1308-75012.jpg',
-            'https://img.freepik.com/free-vector/festive-birthday-background-with-balloons_1308-75013.jpg',
-            'https://img.freepik.com/free-vector/happy-birthday-card-with-balloons-cake_1308-75014.jpg',
-            'https://img.freepik.com/free-vector/party-background-with-balloons-confetti_1308-75015.jpg',
-            'https://img.freepik.com/free-vector/happy-birthday-background-with-gifts-cake_1308-75016.jpg',
-            'https://img.freepik.com/free-vector/celebration-background-with-balloons_1308-75017.jpg',
-            'https://img.freepik.com/free-vector/happy-birthday-card-with-confetti_1308-75018.jpg'
+            '/images/embe1.jpg',
+            '/images/embe2.jpg',
+            '/images/embe3.jpg',
+            '/images/embe4.jpg',
+            '/images/embe5.jpg',
+            '/images/embe6.jpg',
+            '/images/embe7.jpg',
+            '/images/embe8.jpg',
+            '/images/embe9.jpg',
+            '/images/embe10.jpg',
+            '/images/embe11.jpg',
+            '/images/embe12.jpg',
+            '/images/embe13.jpg',
+            '/images/embe14.jpg',
+            '/images/embe15.jpg',
+            '/images/embe16.jpg',
+            '/images/embe17.jpg',
+            '/images/embe18.jpg',
+            '/images/embe19.jpg',
+            '/images/embe20.jpg',
+            '/images/embe21.jpg',
+            '/images/embe22.jpg',
+            '/images/embe23.jpg',
+            '/images/embe24.jpg',
+            '/images/embe25.jpg',
+            '/images/embe26.jpg',
+            '/images/embe27.jpg',
+            '/images/embe28.jpg',
+            '/images/embe29.jpg',
+            '/images/embe30.jpg',
         ];
 
         const imageObjects = [];
