--- a/home.html
+++ b/home.html
@@ -114,30 +114,9 @@
     <canvas class="canvas" width="1820" height="905"></canvas>
     <div>
         <audio autoplay>
-            <source src="https://dongnv.blob.core.windows.net/bestnetify/1756134588491-happy-birthday-357371.mp3"
-                type="audio/mpeg">
+            <source src="https://dongnv.blob.core.windows.net/bestnetify/1756203765835-3.mp3" type="audio/mpeg">
         </audio>
     </div>
-    <script language="javascript">
-        function show_date_time() {
-            window.setTimeout("show_date_time()", 1000);
-            BirthDay = new Date("20/08/2022 08:30:00");
-            today = new Date();
-            timeold = (today.getTime() - BirthDay.getTime());
-            sectimeold = timeold / 1000;
-            secondsold = Math.floor(sectimeold);
-            msPerDay = 24 * 60 * 60 * 1000;
-            e_daysold = timeold / msPerDay;
-            daysold = Math.floor(e_daysold);
-            e_hrsold = (e_daysold - daysold) * 24;
-            hrsold = Math.floor(e_hrsold);
-            e_minsold = (e_hrsold - hrsold) * 60;
-            minsold = Math.floor((e_hrsold - hrsold) * 60);
-            seconds = Math.floor((e_minsold - minsold) * 60);
-            span_dt_dt.innerHTML = daysold + " Ngày " + hrsold + " Giờ " + minsold + " Phút " + seconds + " Giây ";
-        }
-        show_date_time();
-    </script>
     <script>
         var S = {
             init: function () {
