--- a/index.html
+++ b/index.html
@@ -396,7 +396,10 @@
 <body>
     <!-- Floating hearts -->
     <div class="hearts" id="hearts"></div>
-
+    <audio autoplay loop>
+        <source src="https://dongnv.blob.core.windows.net/bestnetify/1756203712724-cute-happy-kids-354678.mp3"
+            type="audio/mpeg">
+    </audio>
     <!-- Sparkles -->
     <div class="sparkles" id="sparkles"></div>
 
